feat: add unknown language error to translations

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -218,5 +218,6 @@
     "resume": "Resume",
     "downloadResume": "Download resume",
     "openResumeError": "Could not open the resume",
-    "openUrlError": "Could not open the url"
+    "openUrlError": "Could not open the url",
+    "unknownLanguageError": "Language unknown"
 }
