chores: update description in translation files

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,7 +1,7 @@
 {
     "name": "Aladdine Abdou",
-    "description": "Software Imagineer",
-    "subDescription": "Flutter Enthusiast",
+    "description": "Mobile Developer",
+    "subDescription": "Flutter & Android Enthusiast",
     "contacts": [
         {
             "tooltip": "LinkedIn",
