--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,7 +1,7 @@
 {
     "name": "Aladdine Abdou",
-    "description": "Développeur Imagineer",
-    "subDescription": "Passionné de Flutter",
+    "description": "Développeur Mobile",
+    "subDescription": "Passionné par Flutter & Android",
     "contacts": [
         {
             "tooltip": "LinkedIn",
