--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -99,12 +99,8 @@
             ],
             "links": [
                 {
-                    "url": "https://aladdine.dev",
-                    "display": "Inspiré par Aladdine Abdou"
-                },
-                {
-                    "url": "https://brittanychiang.com",
-                    "display": "Inspiré par Brittany Chiang"
+                    "url": "https://www.association-faire.fr",
+                    "display": "Association FAIRE"
                 }
             ]
         }
@@ -125,7 +121,7 @@
                 "Firebase"
             ],
             "links": [
-                {
+{
                     "url": "https://aladdine.dev",
                     "display": "Inspiré par Aladdine Abdou"
                 },
