chores: update translations

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -70,7 +70,7 @@
         {
             "job": "Mobile App Developer",
             "company": "Solutions Multi Techniques",
-            "description": "Development of a Progressive Web App for security systems technicians, that allows them to generate comprehensive quotes in PDF format including photos. This enables immediate delivery of quotes to customers after the visit.",
+            "description": "Development of a Progressive Web App for security system technicians, enabling them to generate comprehensive PDF quotes. This allows for the immediate delivery of quotes to clients after their visit, thereby increasing the conversion rate.",
             "startYear": 2022,
             "startMonth": 1,
             "endYear": 2022,
