--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -114,7 +114,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/portfolio.png",
+            "screenshotPath": "assets/images/portfolio.png",
             "technologies": [
                 "Flutter",
                 "Dart",
@@ -138,7 +138,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/learnflow-api.png",
+            "screenshotPath": "assets/images/learnflow-api.png",
             "technologies": [
                 "Node.js",
                 "Express",
@@ -154,7 +154,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/learnflow-backoffice.png",
+            "screenshotPath": "assets/images/learnflow-backoffice.png",
             "technologies": [
                 "Flutter",
                 "Dart"
@@ -167,7 +167,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/gsb-frais.png",
+            "screenshotPath": "assets/images/gsb-frais.png",
             "technologies": [
                 "Symfony",
                 "PHP",
@@ -183,7 +183,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/gsb-rv-visiteur-serveur.png",
+            "screenshotPath": "assets/images/gsb-rv-visiteur-serveur.png",
             "technologies": [
                 "Flask",
                 "Python",
@@ -198,7 +198,7 @@
             "iconCodePoint": "0xf09b",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter",
-            "screenshotUrl": "assets/images/gsb-rv-dr.png",
+            "screenshotPath": "assets/images/gsb-rv-dr.png",
             "technologies": [
                 "JavaFX",
                 "Java",
